Remove noisy log warnings